# Polynomial

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  polynomial.cpp  polynomial.h  travis.sh
examples/: CMakeLists.txt
include/: polynomial.hpp
src/: CMakeLists.txt  polynomial.cpp
tests/: ArithmeticTest.cpp  CMakeLists.txt  ComparisonTest.cpp  ConstructorTest.cpp  FillTest.cpp  OtherTest.cpp  PrintTest.cpp
